objects/Customer__c.object
<CustomObject>
    <description>A customer that is signed up with AutoRABIT</description>
    <fields>
        <fullName>E_Mail__c</fullName>
        <description>E-Mail of the Customer</description>
        <label>E-Mail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>On_Boarding_Date__c</fullName>
        <label>On-Boarding Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <description>Products Subscribed To</description>
        <label>Product</label>
        <required>true</required>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ARM - Automated release Management</fullName>
                </value>
                <value>
                    <fullName>CodeScan</fullName>
                </value>
                <value>
                    <fullName>Flow Center (BETA)</fullName>
                </value>
                <value>
                    <fullName>RBM - Record Based Migration</fullName>
                </value>
                <value>
                    <fullName>Vault</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sale_Amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount that has been charged for the product(s) overall</description>
        <label>Sale Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <label>Customer</label>
    <nameField>
        <label>Customer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Customers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>